# xAI-football-bet

./: pyproject.toml  sport_beting.ipynb
dataset/: BRA.csv  next.csv
