[project]
name = "xai-football-bet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "optuna>=4.5.0",
    "optuna-integration>=4.5.0",
    "pandas>=2.3.3",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.1.1",
]
